# A2A

./: README.md
demo/ui/service/client/: client.py
samples/python/: pyproject.toml
samples/python/agents/restate/: README.md  __main__.py  a2a_server.py  agent.py  middleware.py  pyproject.toml
